--- a/Destacados.html
+++ b/Destacados.html
@@ -11,9 +11,9 @@
 	<!--MenuHeader-->
 	<header>
 		<nav class="navbar navbar-expand-md navbar-dark">
-			<div class="container-fluid align-items-center">
-				<a class="navbar-brand" href="index.html" title="Home">
-					<img src="img/Logo.png" alt="Home" width="100">
+			<div class="container-fluid align-items-baseline">
+				<a href="index.html" title="Home">
+					<img src="img/Logo.png" alt="Home" width="90">
 				</a>
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
